[package]
name = "spaceheart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
whoami = "1.5.1"
hostname = "0.4.0"
dirs = "5.0.1"
clap = "4.5.4"
dialoguer = "0.11.0"
rustyline = "14.0.0"
